@@ -1215,7 +1215,7 @@ $wgCacheEpoch = '20030516000000';
  * to ensure that client-side caches don't keep obsolete copies of global
  * styles.
  */
-$wgStyleVersion = '99';
+$wgStyleVersion = '100';
 
 
 # Server-side caching:
